--- a/www/package.json
+++ b/www/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
+  "name": "project-bosun-portal",
+  "description": "Project Exercises",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "gatsby": "^1.9.42",
     "gatsby-link": "^1.4.1",
     "gatsby-source-filesystem": "^1.5.1",
-    "gatsby-transformer-remark": "^1.7.12"
+    "gatsby-transformer-remark": "^1.7.12",
+    "slug": "^0.9.1"
   }
 }
