--- a/www/package.json
+++ b/www/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "gatsby": "^1.9.42",
     "gatsby-link": "^1.4.1",
+    "gatsby-plugin-styled-components": "^2.0.4",
     "gatsby-source-filesystem": "^1.5.1",
     "gatsby-transformer-remark": "^1.7.12",
-    "slug": "^0.9.1"
+    "slug": "^0.9.1",
+    "styled-components": "^2.2.4"
   }
 }
