--- a/www/package.json
+++ b/www/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "netlify": "yarn install && yarn build"
   },
   "dependencies": {
     "gatsby": "^1.9.42",
